--- a/Comits.html
+++ b/Comits.html
@@ -34,7 +34,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Comits.html" data-home-page-title="Comits" class="u-body u-xl-mode"><header class="u-black u-clearfix u-header u-header" id="sec-8624"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-black u-clearfix u-header u-header" id="sec-8624"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Comits.html#sec-adfb" data-page-id="89180470" class="u-image u-logo u-image-1" data-image-width="1630" data-image-height="1080" title="Comits">
           <img src="images/Screenshot2022-02-14at16.20.38.png" class="u-logo-image u-logo-image-1">
         </a>
