--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Site3",
-		"logo": "/images/Screenshot2022-02-14at16.20.38.png"
+		"logo": "images/Screenshot2022-02-14at16.20.38.png"
 }</script>
     <meta name="theme-color" content="#803bec">
     <meta property="og:title" content="Comits">
@@ -37,7 +37,7 @@
   </head>
   <body data-home-page="Comits.html" data-home-page-title="Comits" class="u-body u-xl-mode"><header class="u-black u-clearfix u-header u-header" id="sec-8624"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="/Comits.html#sec-adfb" data-page-id="89180470" class="u-image u-logo u-image-1" data-image-width="1630" data-image-height="1080" title="Comits">
-          <img src="/images/Screenshot2022-02-14at16.20.38.png" class="u-logo-image u-logo-image-1">
+          <img src="images/Screenshot2022-02-14at16.20.38.png" class="u-logo-image u-logo-image-1">
         </a>
       </div></header>
     <section class="u-align-left u-clearfix u-image u-shading u-section-1" src="" data-image-width="1200" data-image-height="800" id="sec-adfb">
@@ -98,7 +98,7 @@
 </g>
 </g></svg></span>
                     </a>
-                    <a class="u-social-url" target="_blank" data-type="Custom" title="Github" href="https://github.com/TNelen"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-white u-icon-3"><img src="/images/3.png" alt=""></span>
+                    <a class="u-social-url" target="_blank" data-type="Custom" title="Github" href="https://github.com/TNelen"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-white u-icon-3"><img src="images/3.png" alt=""></span>
                     </a>
                   </div>
                 </div>
@@ -122,25 +122,25 @@
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="/images/702814.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/702814.png" alt=""></span>
                 <h3 class="u-align-center u-text u-text-default u-text-3">Idea</h3>
                 <p class="u-align-center u-text u-text-grey-60 u-text-4"> Whether you’ve got a big idea or a 100-page proposal, we’re ready for it. During an initial consultation, we’ll create a focused, goal-oriented strategy.</p>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="/images/3159310.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="images/3159310.png" alt=""></span>
                 <h3 class="u-align-center u-text u-text-default u-text-5">Design</h3>
                 <p class="u-align-center u-text u-text-grey-60 u-text-6">Turn your idea into a design! With great UI and UX we build applications that meet your needs.</p>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="/images/1336494.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="images/1336494.png" alt=""></span>
                 <h3 class="u-align-center u-text u-text-default u-text-7">Develop</h3>
                 <p class="u-align-center u-text u-text-grey-60 u-text-8"> We build remarkable products with transparency, trust, professional expertise and great work ethic. We believe in frequent progress updates and demonstrations.</p>
               </div>
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="/images/4008657.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="images/4008657.png" alt=""></span>
                 <h3 class="u-align-center u-text u-text-default u-text-9">Validate</h3>
                 <p class="u-align-center u-text u-text-grey-60 u-text-10">Only the best is good enough! We develop application of high quality that meet the requirements!</p>
               </div>
@@ -183,7 +183,7 @@
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-gallery-item">
               <div class="u-back-slide" data-image-width="626" data-image-height="417">
-                <img class="u-back-image u-expanded" src="/images/businessman-checking-stock-market-online_53876-11970.jpg">
+                <img class="u-back-image u-expanded" src="images/businessman-checking-stock-market-online_53876-11970.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1">
                 <h3 class="u-gallery-heading"></h3>
@@ -192,7 +192,7 @@
             </div>
             <div class="u-gallery-item">
               <div class="u-back-slide" data-image-width="626" data-image-height="626">
-                <img class="u-back-image u-expanded" src="/images/music-player-app-interface-set_23-2148547854.jpg">
+                <img class="u-back-image u-expanded" src="images/music-player-app-interface-set_23-2148547854.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2">
                 <h3 class="u-gallery-heading"></h3>
@@ -201,7 +201,7 @@
             </div>
             <div class="u-gallery-item">
               <div class="u-back-slide" data-image-width="462" data-image-height="417">
-                <img class="u-back-image u-expanded" src="/images/cxcc.jpg">
+                <img class="u-back-image u-expanded" src="images/cxcc.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-3">
                 <h3 class="u-gallery-heading"></h3>
@@ -210,7 +210,7 @@
             </div>
             <div class="u-gallery-item">
               <div class="u-back-slide" data-image-width="462" data-image-height="417">
-                <img class="u-back-image u-expanded" src="/images/ccc.jpg">
+                <img class="u-back-image u-expanded" src="images/ccc.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-4">
                 <h3 class="u-gallery-heading"></h3>
@@ -219,7 +219,7 @@
             </div>
             <div class="u-gallery-item">
               <div class="u-back-slide" data-image-width="462" data-image-height="417">
-                <img class="u-back-image u-expanded" src="/images/vcv.jpg">
+                <img class="u-back-image u-expanded" src="images/vcv.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-5">
                 <h3 class="u-gallery-heading"></h3>
@@ -228,7 +228,7 @@
             </div>
             <div class="u-gallery-item">
               <div class="u-back-slide" data-image-width="626" data-image-height="626">
-                <img class="u-back-image u-expanded" src="/images/black-screen-smartphone-mockup-design_53876-65977.jpg">
+                <img class="u-back-image u-expanded" src="images/black-screen-smartphone-mockup-design_53876-65977.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-6">
                 <h3 class="u-gallery-heading"></h3>
@@ -289,10 +289,10 @@
         <h2 class="u-text u-text-1">Get in touch</h2>
         <a href="tel:+32 471 58 08 83" class="u-active-none u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-text-body-alt-color u-top-left-radius-0 u-top-right-radius-0 u-btn-1"><span class="u-icon"><svg class="u-svg-content" viewBox="0 0 405.333 405.333" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M373.333,266.88c-25.003,0-49.493-3.904-72.704-11.563c-11.328-3.904-24.192-0.896-31.637,6.699l-46.016,34.752    c-52.8-28.181-86.592-61.952-114.389-114.368l33.813-44.928c8.512-8.512,11.563-20.971,7.915-32.64    C142.592,81.472,138.667,56.96,138.667,32c0-17.643-14.357-32-32-32H32C14.357,0,0,14.357,0,32    c0,205.845,167.488,373.333,373.333,373.333c17.643,0,32-14.357,32-32V298.88C405.333,281.237,390.976,266.88,373.333,266.88z"></path></svg><img></span>&nbsp;+32 (0) 471 58 08 83
         </a>
-        <p class="u-custom-font u-font-ubuntu u-text u-text-2"><span class="u-file-icon u-icon u-text-white u-icon-2"><img src="/images/15.png" alt=""></span>&nbsp;​&nbsp;Kammenstraat 73, 2910 Essen Belgie
+        <p class="u-custom-font u-font-ubuntu u-text u-text-2"><span class="u-file-icon u-icon u-text-white u-icon-2"><img src="images/15.png" alt=""></span>&nbsp;​&nbsp;Kammenstraat 73, 2910 Essen Belgie
         </p>
         <p class="u-custom-font u-font-ubuntu u-text u-text-3">
-          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" href="mailto:timo@comits.be"><span class="u-file-icon u-icon u-text-white"><img src="/images/16.png" alt=""></span>&nbsp; timo@comits.be
+          <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" href="mailto:timo@comits.be"><span class="u-file-icon u-icon u-text-white"><img src="images/16.png" alt=""></span>&nbsp; timo@comits.be
           </a>
         </p>
       </div>
