--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ background-color: #000000 !important
     
     
     <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-a418"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">COMITS. 2022</p>
+        <p class="u-small-text u-text u-text-variant u-text-1"> © 2022 Comits. All Rights Reserved</p>
       </div></footer>
   <section class="u-align-center u-clearfix u-cookies-consent u-grey-80 u-cookies-consent" id="sec-9005">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
