--- a/Comits.html
+++ b/Comits.html
@@ -166,7 +166,7 @@
       </div>
     </section>
     <section class="u-clearfix u-grey-90 u-section-6" id="carousel_7351">
-      <div class="u-clearfix u-sheet u-valign-top-sm u-valign-top-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-top-sm u-sheet-1">
         <div class="u-custom-color-2 u-shape u-shape-rectangle u-shape-1"></div>
         <div class="u-container-style u-expanded-width-xs u-group u-white u-group-1">
           <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/3247956.png" alt=""></span>
@@ -392,15 +392,33 @@ background-color: #000000 !important
 
 @media (max-width: 575px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 121px;
+    min-height: 212px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-1 {
+    padding-bottom: 30px;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 20px;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 158px;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
-    min-height: 15px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-2 {
+    padding: 30px;
   }
 }</style></section></body>
 </html>
